fixed an issue causing comment box wrap code
unfortunatly, fixing this required manual javascript sizing of the
comment's outer element. Darn it, though, for the life of me I couldn't
find a standard, non-hacky CSS way to do it!

--- a/resources/app-theme.css
+++ b/resources/app-theme.css
@@ -240,7 +240,7 @@ body {
 code.code-block {
     flex: 1;
     position: relative;
-    padding: 5px;
+    padding: 10px;
     line-height: 1.35em;
     background: transparent;
     overflow: auto;
